2009-03-20  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceView.cs: Patch
	from Alexander Kojevnikov fixing focus loss when renaming non-active
	source (BGO #527508)

2009-03-20  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Rendering.cs:
	Patch from Alexander Kojevnikov fixing a dragged column rendering glitch
	when hscroll position is non-zero (BGO #536853)

2009-03-20  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Interaction.cs:
	Patch from Alexander Kojevnikov fixing mouse interactions with ListView's
	cells (such as the rating) when hscroll position is non-zero (BGO #538535)

2009-03-20  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.SmartPlaylist.Gui/Editor.cs:
	* src/Core/Banshee.ThickClient/Resources/banshee-dialogs.glade: Patch from
	Alexander Kojevnikov fixing bug with predefined smart playlists'
	descriptions being so wide they caused ugly horizontal scrolling (BGO
	#556887)

2009-03-19  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Database/SortKeyUpdater.cs: When the
	locale has changed, update the SearchKeys as well.

2009-03-19  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Database/BansheeDbFormatMigrator.cs:
	Update the MetadataHash for tracks that have an unknown artist, album,
	and/or title, fixing a problem where such items got removed and readded to
	devices on every sync (BGO #569379)

2009-03-19  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Core/Banshee.Collection/AlbumInfo.cs:
	* src/Core/Banshee.Core/Banshee.Collection/ArtistInfo.cs:
	* src/Core/Banshee.Core/Banshee.Collection/TrackInfo.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseAlbumInfo.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseArtistInfo.cs: