@@ -1,3 +1,10 @@
+2009-03-20  John Millikin  <jmillikin@gmail.com>
+
+	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellTrackAndCount.cs:
+	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellDiscAndCount.cs:
+	If the total disc or track count is 0, display only the disc/track
+	number. If neither count is >0, display nothing. (BGO #573093)
+
 2009-03-20  Gabriel Burt  <gabriel.burt@gmail.com>
 
 	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceView.cs: Patch
